height issue on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,7 +17,7 @@ body {
   //position: fixed;
   //top: 0;
   //bottom: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0;
   padding: 0;
